// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'full arc to the ending': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-bureaucracy",
      "campaignVersion": "1.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "clerk_review",
      "nodeKind": "random",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "clerk_review",
      "nodeKind": "random",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "goto": "room_14",
      "nodeId": "clerk_review",
      "weight": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.random.picked",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 4,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 5,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 6,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "step": 2,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 7,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "wait",
    },
    "name": "core.action.accepted",
    "ordinal": 8,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:1",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "visitCount": 2,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "visitCount": 2,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 3,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 4,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "continue_cycle",
    },
    "name": "core.action.accepted",
    "ordinal": 5,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:2",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 2,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "visitCount": 3,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 2,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 2,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "visitCount": 3,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 3,
    "scope": "game",
    "seq": 2,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 4,
    "scope": "game",
    "seq": 2,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "continue_cycle",
    },
    "name": "core.action.accepted",
    "ordinal": 5,
    "scope": "game",
    "seq": 2,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:3",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 3,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "reward",
      "nodeKind": "ending",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 3,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "reward",
      "nodeKind": "ending",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 3,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "go_home",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 3,
    "severity": "info",
  },
  {
    "name": "core.game.ended",
    "ordinal": 4,
    "scope": "game",
    "seq": 3,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'full arc to the ending': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"wait","seq":0},{"actionId":"continue_cycle","seq":1},{"actionId":"continue_cycle","seq":2},{"actionId":"go_home","seq":3}],"campaignId":"bulgaria-bureaucracy","campaignVersion":"1.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"reward","endingId":"ultimate_reward","turn":8,"unlockedAchievements":["it_builds_character"],"variables":{"certificate_age_months":0,"office_visits":3},"visitedCounts":{"clerk_review":1,"municipality":1,"reward":1,"room_14":3,"room_6":3}},"seed":"bureaucracy-seed-3","status":"ended"}"`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'mid-arc, non-terminal': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "municipality",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-bureaucracy",
      "campaignVersion": "1.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "clerk_review",
      "nodeKind": "random",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "clerk_review",
      "nodeKind": "random",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "goto": "room_14",
      "nodeId": "clerk_review",
      "weight": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.random.picked",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 4,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_14",
      "nodeKind": "auto",
      "step": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 5,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 6,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "room_6",
      "nodeKind": "choice",
      "step": 2,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 7,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "wait",
    },
    "name": "core.action.accepted",
    "ordinal": 8,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Bureaucracy campaign (04-core.md §14) > 'mid-arc, non-terminal': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"wait","seq":0}],"campaignId":"bulgaria-bureaucracy","campaignVersion":"1.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"room_6","turn":3,"unlockedAchievements":[],"variables":{"certificate_age_months":0,"office_visits":1},"visitedCounts":{"clerk_review":1,"municipality":1,"room_14":1,"room_6":1}},"seed":"bureaucracy-seed-3","status":"active"}"`;
